Fix cart tab spacing

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -85,7 +85,7 @@ button:hover:active {
   position: fixed;
   z-index: 1;
   right: 10px;
-  top: 200px;
+  top: 210px;
   padding: 0px 0px;
 }
 
@@ -93,7 +93,7 @@ button:hover:active {
   position: fixed;
   z-index: 1;
   right: 10px;
-  top: 150px;
+  top: 160px;
   padding: 0px 0px;
 }
 
